modifies contact links

--- a/src/scss/stylish-portfolio.css
+++ b/src/scss/stylish-portfolio.css
@@ -206,13 +206,13 @@ h6 {
 .icon-like {
   line-height: inherit; }
 
-.callout {
+.contact {
   padding: 15rem 0;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("./img/bg-callout.jpg");
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("./img/bg-contact.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover; }
-  .callout h2 {
+  .contact h2 {
     font-size: 3.5rem;
     color: #fff;
     font-weight: 700;
