--- a/src/scss/stylish-portfolio.scss
+++ b/src/scss/stylish-portfolio.scss
@@ -7,7 +7,7 @@
 @import "masthead.scss";
 @import "sidebar.scss";
 @import "skills.scss";
-@import "callout.scss";
+@import "contact.scss";
 @import "portfolio.scss";
 @import "footer.scss";
 @import "bootstrap-overrides.scss";
